fixing experience page on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -457,7 +457,6 @@ li.project img{
 
 .col-md-4{
   width: 100%;
-  float: left;
   align-items: stretch;
 }
 
@@ -479,6 +478,6 @@ li.project img{
   .col-md-4{
     width: 33%;
     height:100%;
-    float: none;
+    float: left;
   }
 }
